<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/LinBtns"
        android:scrollbars="vertical"
        />

    <LinearLayout
        android:id="@+id/LinBtns"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >
        <ProgressBar
            android:id="@+id/progressbar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="5"
            android:theme="@style/CircularProgress"
            android:visibility="invisible"
            android:indeterminate="true"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blue"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@color/white"
            android:baselineAligned="false">
            <LinearLayout
                android:id="@+id/lin1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:alpha="0.7"
                android:clickable="true"
                android:focusable="true"
                android:onClick="Add"
                >
                <ImageView
                    android:src="@drawable/plus"
                    android:layout_gravity="top"
                    android:scaleType="fitCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="15"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:text="@string/btn_list_check"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_list_add"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:clickable="false"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:alpha="0.7"
                android:clickable="true"
                android:focusable="true"
                android:onClick="Check"
                >

                <ImageView
                    android:src="@drawable/check"
                    android:layout_gravity="top"
                    android:scaleType="fitCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="15"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:text="@string/btn_list_check"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_list_check"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:clickable="false"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:alpha="0.7"
                android:clickable="true"
                android:focusable="true"
                android:onClick="DeleteAll"
                >
                <ImageView
                    android:src="@drawable/rubbish"
                    android:layout_gravity="top"
                    android:scaleType="fitCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="15"
                    android:background="@android:color/transparent"
                    android:text="@string/btn_list_delete"
                    android:clickable="false"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_list_delete"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:clickable="false"
                    />

            </LinearLayout>
        </LinearLayout>
   </LinearLayout>

</RelativeLayout>


